fixed whitespace error in email and error preventing cart from opening

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -140,7 +140,9 @@ background-color: #FEB801;
 }
 
 
-
+.container-mobile-cart {
+  display: none;
+}
 
 
 .free-shipping-banner {
